<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:actionBarNavMode="standard"
    tools:menu="@menu/tool_bar"
    tools:context=".AuthScreen">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_msg"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextView"/>

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:padding="4sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGrp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.8" />

    <RadioGroup
        android:id="@+id/radioGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/btnGrp"
        android:contentDescription="@string/assignment_type"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.174">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/site"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:text="@string/site"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/office"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:fontFamily="cursive"
            android:text="@string/office" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>